methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var j=0
  for (j <- 0 to 6){
    var arret=false
    if (vuBiscuit()){
      arret=vuBiscuit()
      return true
    }else{
      droite()
      avance()
      gauche()
    }
  }
 	return arret
}





def vuBiscuit():Boolean ={
  var biscuit=false
  var i=0
  for(i<-0 to 6){
    if (estSurBiscuit()){
      biscuit=true
    }
    avance()
  }
  avance()
  return biscuit
}